--- a/data_flow_n2_summary.html
+++ b/data_flow_n2_summary.html
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT>No Warnings</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/*.xmsgs?&DataKey=Warning'>4 Warnings (1 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -58,29 +58,29 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slices</TD>
-<TD ALIGN=RIGHT>36</TD>
+<TD ALIGN=RIGHT>221</TD>
 <TD ALIGN=RIGHT>960</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>3%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>23%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
-<TD ALIGN=RIGHT>51</TD>
+<TD ALIGN=RIGHT>138</TD>
 <TD ALIGN=RIGHT>1920</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>2%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>7%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>70</TD>
+<TD ALIGN=RIGHT>416</TD>
 <TD ALIGN=RIGHT>1920</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>3%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>21%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
-<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>38</TD>
 <TD ALIGN=RIGHT>83</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>14%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>45%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of GCLKs</TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>2</TD>
 <TD ALIGN=RIGHT>24</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>4%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>8%</TD>
 </TR>
 </TABLE>
 
@@ -94,7 +94,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/data_flow_n2.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Nov 9 03:24:24 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/data_flow_n2.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Nov 12 04:34:08 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/xst.xmsgs?&DataKey=Warning'>4 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -105,9 +105,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Nov 12 03:17:36 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Nov 12 04:38:41 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/12/2021 - 03:19:46</center>
+<br><center><b>Date Generated:</b> 11/12/2021 - 15:13:42</center>
 </BODY></HTML>
