--- a/data_flow_n2_summary.html
+++ b/data_flow_n2_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>data_flow_n2 Project Status (11/12/2021 - 18:19:11)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>data_flow_n2 Project Status (11/12/2021 - 22:31:54)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>digital_watch_n2.xise</TD>
@@ -105,8 +105,9 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Nov 12 04:38:41 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Sat Nov 13 03:12:56 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/12/2021 - 18:19:11</center>
+<br><center><b>Date Generated:</b> 11/12/2021 - 22:31:55</center>
 </BODY></HTML>
