Refactor data flow

--- a/digital_system_n2_summary.html
+++ b/digital_system_n2_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>digital_system_n2 Project Status (11/12/2021 - 22:42:36)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>digital_system_n2 Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>digital_watch_n2.xise</TD>
@@ -185,5 +185,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/12/2021 - 22:42:38</center>
+<br><center><b>Date Generated:</b> 11/13/2021 - 21:11:25</center>
 </BODY></HTML>
