--- a/digital_system_n2_summary.html
+++ b/digital_system_n2_summary.html
@@ -13,33 +13,33 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>digital_system_n2</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Programming File Generated</TD>
+<TD>Mapped</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc3s100e-4cp132</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
-No Errors</TD>
+<font color="red"; face="Arial"><b>X </b></font>
+<A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/*.xmsgs?&DataKey=Error'>14 Errors (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/*.xmsgs?&DataKey=Warning'>21 Warnings (4 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/*.xmsgs?&DataKey=Warning'>16 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.unroutes'>All Signals Completely Routed</A></TD>
+&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
-<TD>
-<A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
@@ -48,7 +48,7 @@ No Errors</TD>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>&nbsp;&nbsp;</TD>
 </TR>
 </TABLE>
 
@@ -56,112 +56,11 @@ System Settings</A>
 
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='5'><B>Device Utilization Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary"><B>[-]</B></a></TD></TR>
-<TR ALIGN=CENTER BGCOLOR='#FFFF99'>
-<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number Slice Registers</TD>
-<TD ALIGN=RIGHT>149</TD>
-<TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>7%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>144</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
-<TD ALIGN=RIGHT>5</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>218</TD>
-<TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>11%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>177</TD>
-<TD ALIGN=RIGHT>960</TD>
-<TD ALIGN=RIGHT>18%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>177</TD>
-<TD ALIGN=RIGHT>177</TD>
-<TD ALIGN=RIGHT>100%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>177</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>313</TD>
-<TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>16%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>218</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>95</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>23</TD>
-<TD ALIGN=RIGHT>83</TD>
-<TD ALIGN=RIGHT>27%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFGMUXs</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>24</TD>
-<TD ALIGN=RIGHT>8%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>2.92</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
 </TABLE>
 
 
 
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Performance Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PerformanceSummary"><B>[-]</B></a></TD></TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
-<TD>0 (Setup: 0, Hold: 0)</TD>
-<TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
-</TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.unroutes'>All Signals Completely Routed</A></TD>
-<TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
-</TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
-<TD>
-<A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
-<TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TABLE>
+
 
 
 
@@ -169,21 +68,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sat Nov 13 03:18:14 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/xst.xmsgs?&DataKey=Warning'>17 Warnings (4 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/xst.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sat Nov 13 03:20:49 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sat Nov 13 03:21:02 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/map.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Sat Nov 13 03:21:40 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/par.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Nov 15 14:59:58 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/xst.xmsgs?&DataKey=Warning'>12 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Nov 15 15:00:15 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Nov 15 15:00:21 2021</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/map.xmsgs?&DataKey=Error'>14 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/map.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/map.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Mon Nov 15 14:54:51 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Sat Nov 13 03:21:48 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Sat Nov 13 03:23:36 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Mon Nov 15 14:54:56 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/digital_system_n2.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Mon Nov 15 14:52:11 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Nov 12 04:38:41 2021</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Sat Nov 13 03:23:37 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Nov 15 14:50:02 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/ISE_Projects/digital_watch_n2/webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Nov 15 14:52:12 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/13/2021 - 21:11:25</center>
+<br><center><b>Date Generated:</b> 11/14/2021 - 07:10:25</center>
 </BODY></HTML>
